# pyplantuml-bundled

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NOTICE  README.md  cloc.sh  codecov.yml  pyproject.toml  setup.py
.github/workflows/: badge.yml  build.yml  portable.yml  unit-test.yml  watch-upstream-release.yml
docs/: architecture.puml  cli-demo.hello.puml  cli-demo.scenario.json  cli-demo.setup.sh
examples/: 01_sequence_cjk.puml  02_class_diagram.puml  03_component_pipeline.puml  04_state_machine.puml
scripts/: build_jre.sh  bump_plantuml_version.sh  fetch_plantuml_jar.sh  portable_smoketest.sh  render_cli_demo.sh  stage2_install_python.sh  stage2_install_wheel.sh  stage_linux_runtime.sh
scripts/pyinstaller/: build.sh  entitlements.plist  entry.py  plantuml.spec
src/pyplantuml/: __init__.py  _click_cli.py  _diagnose.py  _inmem.py  diagnostics.py  session.py
src/pyplantuml/runtime/: fonts.conf.template
tests/: conftest.py  docker_smoke.sh  test_basic.py  test_cjk.py  test_lint.py  test_render_inmem.py  test_session.py
tests_portable/: conftest.py  test_portable_cli.py
